--- a/index.html
+++ b/index.html
@@ -3,81 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio.Pro | Creative Developer</title>
+    <title>Portfolio.Pro | Luxury Edition</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark-mode"> <nav id="navbar">
-        <div class="logo">PORTFOLIO.PRO</div>
+<body class="dark-mode">
+
+    <nav id="navbar">
+        <div class="logo">PORTFOLIO<span class="gold-text">.</span>PRO</div>
         <div class="nav-links">
             <a href="#home">Home</a>
+            <a href="#about">About</a>
             <a href="#work">Work</a>
             <button id="theme-toggle"><i class="fas fa-moon"></i></button>
-            <a href="#contact" class="btn-primary">Hire Me</a>
+            <a href="#contact" class="btn-primary gold-bg">Hire Me</a>
         </div>
     </nav>
 
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1 class="reveal">Building Digital <br><span>Experiences.</span></h1>
-                <p class="reveal">Web Developer & UI Designer specializing in high-end aesthetic apps.</p>
-                <a href="#work" class="explore-btn reveal">Explore Work <i class="fas fa-arrow-down"></i></a>
+                <h1 class="reveal">Crafting Digital <br><span class="gold-gradient">Masterpieces.</span></h1>
+                <p class="reveal">High-end Web Development with a focus on luxury aesthetics.</p>
+                <a href="#about" class="explore-btn reveal">Explore My World <i class="fas fa-arrow-down"></i></a>
+            </div>
+        </section>
+
+        <section id="about" class="section reveal">
+            <div class="about-container">
+                <div class="about-image">
+                    <img src="me.jpg" alt="My Portrait" class="profile-img">
+                    <div class="image-overlay"></div>
+                </div>
+                <div class="about-text">
+                    <h2 class="gold-text">About Me</h2>
+                    <h3>Designing the future of the web, one pixel at a time.</h3>
+                    <p>I am a creative developer specializing in building high-performance, visually stunning digital experiences. My approach combines technical precision with a "vibe-centric" design philosophy.</p>
+                    <div class="stats">
+                        <div class="stat-item"><strong>5+</strong><span>Years Exp.</span></div>
+                        <div class="stat-item"><strong>40+</strong><span>Projects</span></div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section id="work" class="section reveal">
             <h2 class="section-header">Selected Work</h2>
             <div class="bento-grid">
-                <div class="bento-item large" onclick="openProject('AI Dashboard')">
-                    <div class="card-content"><h3>AI Dashboard</h3><p>Enterprise SaaS</p></div>
+                <div class="bento-item large" onclick="openProject('Premium SaaS')">
+                    <div class="card-content"><h3>Lux Dashboard</h3><p>Gold Tier Analytics</p></div>
                 </div>
-                <div class="bento-item" onclick="openProject('Crypto App')">
-                    <div class="card-content"><h3>Crypto App</h3></div>
+                <div class="bento-item" onclick="openProject('Luxury E-com')">
+                    <div class="card-content"><h3>Elite Shop</h3></div>
                 </div>
-                <div class="bento-item" onclick="openProject('Minimal E-com')">
-                    <div class="card-content"><h3>Minimal E-com</h3></div>
+                <div class="bento-item" onclick="openProject('Crypto')">
+                    <div class="card-content"><h3>Gold Wallet</h3></div>
                 </div>
-                <div class="bento-item wide" onclick="openProject('Creative Studio')">
-                    <div class="card-content"><h3>Creative Studio</h3><p>Motion Design</p></div>
+                <div class="bento-item wide" onclick="openProject('Studio')">
+                    <div class="card-content"><h3>Motion Studio</h3><p>Premium UI</p></div>
                 </div>
             </div>
         </section>
 
         <section id="contact" class="section reveal">
             <div class="contact-box">
-                <h2 class="section-header en show">Contact</h2>
-                <h2 class="section-header fr">Contact</h2>
-                <h3>Ready to start a project together?</h3>
-                <p>I'd love to work with you. Fill out the form below to tell me more:</p>
+                <h2 class="gold-text">Get In Touch</h2>
                 <form action="https://formspree.io/f/xzdejweq" method="POST" class="contact-form">
-                    <label for="name">Name</label>
-                    <input name="name" id="name" placeholder="Your Name" required>
-                    <label for="email">Email</label>
-                    <input name="email" id="email" placeholder="Your Email" type="email" required>
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" placeholder="Your Message" required></textarea>
-                    <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
+                    <input name="name" placeholder="Your Name" required>
+                    <input name="email" placeholder="Your Email" type="email" required>
+                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <button type="submit" class="gold-bg">Send Message</button>
                 </form>
             </div>
         </section>
     </main>
 
-    <div id="projectModal" class="modal-full">
-        <div class="modal-full-content">
-            <span class="close" onclick="closeProject()">&times;</span>
-            <h2 id="modal-title"></h2>
-            <p id="modal-desc">This is a detailed description of the project and the tech stack used.</p>
-            <div class="gallery">
-                <button class="prev" onclick="changeImage(-1)"><i class="fas fa-chevron-left"></i></button>
-                <img id="modal-main-img" src="https://via.placeholder.com/800x450" alt="Project Image">
-                <button class="next" onclick="changeImage(1)"><i class="fas fa-chevron-right"></i></button>
-            </div>
-        </div>
-    </div>
-
-    <button id="topBtn"><i class="fas fa-arrow-up"></i></button>
+    <button id="topBtn" class="gold-bg"><i class="fas fa-arrow-up"></i></button>
 
     <script src="script.js"></script>
 </body>
