--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Arzouni | Creative Developer & Product Manager</title>
+    <title>Adam Arzouni | Creative Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -33,8 +33,6 @@
                     <span class="en">Building Digital <br><span class="mustard-gradient">Experiences.</span></span>
                     <span class="fr">Créateur d'Espaces <br><span class="mustard-gradient">Digitaux.</span></span>
                 </h1>
-                <p class="reveal en">Creative Product Manager & Developer based in France.</p>
-                <p class="reveal fr">Product Manager & Développeur Créatif basé en France.</p>
                 
                 <div class="explore-container reveal">
                     <a href="#about" class="explore-btn">
@@ -50,15 +48,21 @@
 
         <section id="about" class="section reveal">
             <div class="about-container">
-                <div class="about-image">
+                <div class="about-image-wrapper">
                     <img src="images/me.jpg" alt="Adam Arzouni" class="profile-img">
                 </div>
                 <div class="about-text">
                     <h2 class="mustard-text">01. About Me</h2>
                     <h3 class="en">Innovation driven by precision.</h3>
                     <h3 class="fr">L'innovation guidée par la précision.</h3>
-                    <p class="en">I am Adam Arzouni, a professional blending technical development with strategic product management. My goal is to create products that are not just functional, but emotionally resonant.</p>
+                    <p class="en">I am Adam Arzouni, a professional blending technical development with strategic product management.</p>
                     <p class="fr">Je suis Adam Arzouni, un professionnel alliant développement technique et gestion de produit stratégique.</p>
+                    
+                    <a href="documents/Adam_Arzouni_CV.pdf" class="cv-btn" download>
+                        <i class="fas fa-file-download"></i>
+                        <span class="en">Download CV</span>
+                        <span class="fr">Télécharger CV</span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -73,8 +77,6 @@
                     <div class="time-content">
                         <span class="date">2024 — Present</span>
                         <h4>Product Manager @ Visiativ</h4>
-                        <p class="en">Leading product strategy and digital transformation initiatives.</p>
-                        <p class="fr">Pilotage de la stratégie produit et des initiatives de transformation digitale.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -82,17 +84,6 @@
                     <div class="time-content">
                         <span class="date">2023 — 2024</span>
                         <h4>Project Manager Officer @ Safran</h4>
-                        <p class="en">Managing high-stakes aerospace projects and process optimization.</p>
-                        <p class="fr">Gestion de projets aéronautiques et optimisation des processus.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="time-dot"></div>
-                    <div class="time-content">
-                        <span class="date">2022 — 2023</span>
-                        <h4>Junior Product Manager @ Cegid</h4>
-                        <p class="en">Focused on SaaS solutions and user experience enhancements.</p>
-                        <p class="fr">Focus sur les solutions SaaS et l'amélioration de l'expérience utilisateur.</p>
                     </div>
                 </div>
             </div>
@@ -116,8 +107,6 @@
             <div class="contact-wrapper">
                 <div class="contact-header">
                     <h2 class="mustard-text">04. Get In Touch</h2>
-                    <p class="en">Have a project in mind? Let's build it together.</p>
-                    <p class="fr">Un projet en tête ? Construisons-le ensemble.</p>
                 </div>
                 <form action="https://formspree.io/f/xzdejweq" method="POST" class="contact-form">
                     <div class="input-group">
@@ -125,10 +114,7 @@
                         <input name="email" placeholder="Email" type="email" required>
                     </div>
                     <textarea name="message" placeholder="Your Message" required></textarea>
-                    <button type="submit" class="mustard-bg">
-                        <span class="en">Send Message</span>
-                        <span class="fr">Envoyer</span>
-                    </button>
+                    <button type="submit" class="mustard-bg">Send Message</button>
                 </form>
             </div>
         </section>
